--- a/bubble-animation/argo-application.yaml
+++ b/bubble-animation/argo-application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bubble-animation-app
+  name: bubble-animation-app-hyder
   namespace: openshift-gitops
 spec:
   destination:
